--- a/extendedwignersfriend.tex
+++ b/extendedwignersfriend.tex
@@ -2,6 +2,7 @@
 \usepackage{fancyhdr}
 \usepackage{physics}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 \usepackage{subcaption}
 \usepackage{floatrow}
@@ -22,7 +23,8 @@
 
 \section*{Abstract}
 In diesem Dokument schlage ich zwei mögliche Korrekturen zum erweiterten Wigner's Freund Gedankenexperiment von Renner und Frauchiger vor.
-Durch diese Verbesserungen wird der Widerspruch vernichtet, und alle drei Annahmen, \textbf{(Q)}, \textbf{(C)} und \textbf{(S)}, bleiben unverletzt.
+Durch diese Verbesserungen wird der Widerspruch vernichtet, und alle drei Annahmen, \textbf{(Q)}, \textbf{(C)}, und \textbf{(S)}, bleiben unverletzt.
+Zudem schlage ich eine Methode zur Berechnung von Messungen an einem geschachtelten Quantensystem vor, die Einsatz in der zweiten Korrektur findet.
 
 \section*{Der erste Fehler}
 Im Artikel von Renner und Frauchiger wird folgendes Statement hergeleitet:
@@ -46,7 +48,7 @@ Der Aufbau des Experiments ist in Bild 1.1 dargestellt. $Q_1$ und $Q_2$ stellen 
 	\item \textbf{Schritt 2:} $F$ misst $Q_1$. Ist das Ergebnis $\ket{h}$, setzt er $Q_2$ als $\ket{\downarrow}$, sonst setzt er $Q_2$ als $\ket{\uparrow}$.
 	\item \textbf{Schritt 3:} $W$ misst sein Labor in der Basis $\qty{\ket{+}, \ket{-}}$, mit $\ket{+} = \frac{1}{\sqrt{2}} \ket{h} + \frac{1}{\sqrt{2}} \ket{t}$ und $\ket{-} = \frac{1}{\sqrt{2}} \ket{h} - \frac{1}{\sqrt{2}} \ket{t}$.
 \end{itemize}
-Nach Schritt 2 hat das Labor von $W$ den Zustand $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow} = \frac{1}{2}\ket{+}\ket{\downarrow} + \frac{1}{2}\ket{-}\ket{\downarrow} + \frac{1}{2}\ket{+}\ket{\uparrow} - \frac{1}{2}\ket{-}\ket{\uparrow}$. Wir nehmen nun an dass $W$ $\ket{-}$ misst. Der Endzustand lautet: $\frac{1}{\sqrt{2}} \ket{-}\ket{\downarrow} - \frac{1}{\sqrt{2}} \ket{-}\ket{\uparrow} = \frac{1}{2}\ket{h}\ket{\downarrow} - \frac{1}{2}\ket{t}\ket{\downarrow} - \frac{1}{2}\ket{h}\ket{\uparrow} + \frac{1}{2}\ket{t}\ket{\uparrow}$. Auch hier sehen wir, dass aus Sicht von $F$ die Werte $\ket{t}\ket{\downarrow}$ und $\ket{h}\ket{\uparrow}$ nicht in Frage kommen. Wie kann es aber sein, dass unsere Berechnungen zu so einer Wahrscheinlichkeitsverteilung führen? Meine Behauptung: Die Annahmen, die wir bei der Berechnung beim Messen machen, sind falsch. Wir betrachten bei unserer Annahme ein Quantenregister mit zwei Qubits, im Zustand $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$, siehe Bild 1.2. $W$ misst hier das Quantenregister, welches in einer Superposition ist. Dieses Modell entspricht aber nicht der wirklichen Situation! Im richtigen Modell haben wir ein geschachteltes System: $Q_2$ ist ein Qubit im Labor von $F$, welches im Labor von $W$ ist(wobei $Q_2$ nicht unbedingt isoliert sein muss, da es nicht in eine Superposition gesetzt wird; Hier würde auch ein normales Bit ausreichen). Die Schachtelung entsteht dadurch, dass $F$ auch eine Messungen durchführt, aber $F$'s Handlungen selber nur eine Superposition im Labor von $W$ sind. Um die Superposition richtig zu messen, schlage ich vor, das zweite Qubit bei der Berechnung zu ignorieren, und es nachher wieder richtig einfügen. Die physikalische Interpretation wäre hierbei, dass wir die Isolation zu $F$'s Labor zerbrechen, aber nicht die Isolation zwischen $F$'s Labor und $Q_2$. Konkret bedeutet das mathematisch: Wir stellen den Zustand nach Schritt 2, $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$, so dar, dass wir $Q_2$ entfernen: $\frac{1}{\sqrt{2}} \ket{h} + \frac{1}{\sqrt{2}} \ket{t} = \ket{+}$. $W$ wird nun ausschliesslich $\ket{+}$ messen. Wir  schreiben nun $\ket{+}$ in der Standardbasis, und fügen $Q_2$ hinzu, und erhalten wieder: $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$. Ich rechtfertige diesen Schritt dadurch, dass das Setzen von $Q_2$ prinzipiel keinen Einfluss auf das Gesamtsystem hat, da $Q_2$ nicht in eine Superposition gesetzt wird. Das Ergebnis muss also das Gleiche sein wie das Ergebnis wenn $Q_2$ aus dem Experiment entfernen.
+Nach Schritt 2 hat das Labor von $W$ den Zustand $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow} = \frac{1}{2}\ket{+}\ket{\downarrow} + \frac{1}{2}\ket{-}\ket{\downarrow} + \frac{1}{2}\ket{+}\ket{\uparrow} - \frac{1}{2}\ket{-}\ket{\uparrow}$. Wir nehmen nun an dass $W$ $\ket{-}$ misst. Der Endzustand lautet: $\frac{1}{\sqrt{2}} \ket{-}\ket{\downarrow} - \frac{1}{\sqrt{2}} \ket{-}\ket{\uparrow} = \frac{1}{2}\ket{h}\ket{\downarrow} - \frac{1}{2}\ket{t}\ket{\downarrow} - \frac{1}{2}\ket{h}\ket{\uparrow} + \frac{1}{2}\ket{t}\ket{\uparrow}$. Auch hier sehen wir, dass aus Sicht von $F$ die Werte $\ket{t}\ket{\downarrow}$ und $\ket{h}\ket{\uparrow}$ nicht in Frage kommen. Wie kann es aber sein, dass unsere Berechnungen zu so einer Wahrscheinlichkeitsverteilung führen? Meine Behauptung: Die Annahmen, die wir bei der Berechnung beim Messen machen, sind falsch. Wir betrachten bei unserer Annahme ein Quantenregister mit zwei Qubits, im Zustand $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$, siehe Bild 1.2. $W$ misst hier das Quantenregister, welches in einer Superposition ist. Dieses Modell entspricht aber nicht der wirklichen Situation! Im richtigen Modell haben wir ein geschachteltes System: $Q_2$ ist ein Qubit im Labor von $F$, welches im Labor von $W$ ist(wobei $Q_2$ nicht unbedingt isoliert sein muss, da es nicht in eine Superposition gesetzt wird; Hier würde auch ein normales Bit ausreichen). Die Schachtelung entsteht dadurch, dass $F$ auch eine Messungen durchführt, aber $F$'s Handlungen selber nur eine Superposition im Labor von $W$ sind. Um die Superposition richtig zu messen, schlage ich vor, das zweite Qubit bei der Berechnung zu ignorieren, und es nachher wieder richtig einzufügen. Die physikalische Interpretation wäre hierbei, dass wir die Isolation zu $F$'s Labor zerbrechen, aber nicht die Isolation zwischen $F$'s Labor und $Q_2$. Konkret bedeutet das mathematisch: Wir stellen den Zustand nach Schritt 2, $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$, so dar, dass wir $Q_2$ entfernen: $\frac{1}{\sqrt{2}} \ket{h} + \frac{1}{\sqrt{2}} \ket{t} = \ket{+}$. $W$ wird nun ausschliesslich $\ket{+}$ messen. Wir  schreiben nun $\ket{+}$ in der Standardbasis, und fügen $Q_2$ wieder hinzu, und erhalten wieder: $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\ket{\uparrow}$. Ich rechtfertige diesen Schritt dadurch, dass das Setzen von $Q_2$ prinzipiel keinen Einfluss auf das Gesamtsystem hat, da $Q_2$ nicht in eine Superposition gesetzt wird. Das Ergebnis muss also das Gleiche sein wie das Ergebnis wenn $Q_2$ aus dem Experiment entfernen. Dies ist zwar ein schlechtes Beispiel, da in diesem Fall das Messen keine Änderung am System bewirkt, in unserer Anwendung beim erweiterten Wigner's Freund Gedankenexperiment, weiter unten, wird dies eine Änderung bewirken.
 
 \begin{figure}[!htb]
 \begin{floatrow}[2]\
@@ -58,8 +60,7 @@ Nach Schritt 2 hat das Labor von $W$ den Zustand $\frac{1}{\sqrt{2}} \ket{h}\ket
 {\includegraphics[width=0.5\textwidth]{b.png}}
 \end{floatrow}
 \end{figure}
-Allerdings bedeutet dies auch im Allgemeinen, dass es komplexer als erwartet ist, Berechnungen von einem geschachtelten Quantensystem durchzuführen, da man für jeden Anteil der Superposition des äusseren Systems auch eine komplette Superposition des inneren Systems abspeichern muss. Die genaue Beschreibung lasse ich aber hier aus, um mich wieder dem eigentlichen Gedankenexperiment zu widmen.\\\\
-Zuerst schlage ich aber noch eine Vereinfachung des Gedankenexperiments vor: Die Aufgaben von $W_1$ und $W_2$ lassen sich auf eine einzelne Person, $W$, übertragen, da sich $W_1$ und $W_2$ selber nicht in einer Superposition befinden und in der gleichen Umgebung sind. Dies wird auch in den Abbildungen so sein. Im Artikel wird das Modell ähnlich grafisch dargestellt wie in Abbildung 2.1. Messtechnisch gesehen ist es aber korrekter das Modell darzustellen wie in Abbildung 2.2. Mein Argument dafür ist folgendes: $F_1$ misst das Zufallsbit $Q_1$, und prepariert $Q_2$ entsprechend nach dem Ergebnis der Messung von $Q_1$, bevor $Q_2$ zu $F_2$ verschickt wird. Um aber das Qubit nach $F_2$ zu schicken, darf $F_2$ erst isoliert werden, wenn $F_2$ das Qubit empfangen hat. Da aus $W$'s Sicht das Ganze aber in einer Superposition geschehen muss, muss die Isolation von $F_2$ im Labor von $F_1$ stattfinden. Praktisch sähe dies so aus, dass $F_1$ das Qubit $Q_2$ zusammen mit $F_2$ in $F_1$'s Labor isoliert, und dass dann $F_2$ innerhalb der Isolation $Q_2$ misst. Anschaulicher lässt sich dies mit einem Quantencomputer darstellen: Man misst ein Quantenbit in einer Superposition, und übergibt das Resultat zusammen mit dem Programm(oder sonst das Programm dem Resultat anpassen), und der Quantencomputer führt in Isolation das Programm aus.
+Nun zum erweiterten Wigner's Freund Gedankenexperiment. Zuerst schlage ich aber noch eine Vereinfachung des Gedankenexperiments vor: Die Aufgaben von $W_1$ und $W_2$ lassen sich auf eine einzelne Person, $W$, übertragen, da sich $W_1$ und $W_2$ selber nicht in einer Superposition befinden und in der gleichen Umgebung sind. Dies wird auch in den Abbildungen so sein. Im Artikel wird das Modell ähnlich grafisch dargestellt wie in Abbildung 2.1. Messtechnisch gesehen ist es aber korrekter das Modell darzustellen wie in Abbildung 2.2. Mein Argument dafür ist folgendes: $F_1$ misst das Zufallsbit $Q_1$, und prepariert $Q_2$ entsprechend nach dem Ergebnis der Messung von $Q_1$, bevor $Q_2$ zu $F_2$ verschickt wird. Um aber das Qubit nach $F_2$ zu schicken, darf $F_2$ erst isoliert werden, wenn $F_2$ das Qubit empfangen hat. Da aus $W$'s Sicht das Ganze aber in einer Superposition geschehen muss, muss die Isolation von $F_2$ im Labor von $F_1$ stattfinden. Praktisch sähe dies so aus, dass $F_1$ das Qubit $Q_2$ zusammen mit $F_2$ in $F_1$'s Labor isoliert, und dass dann $F_2$ innerhalb der Isolation $Q_2$ misst. Anschaulicher lässt sich dies mit einem Quantencomputer darstellen: Man misst ein Quantenbit in einer Superposition, und übergibt das Resultat zusammen mit dem Programm(oder sonst das Programm dem Resultat anpassen), und der Quantencomputer führt in Isolation das Programm aus.
 
 \begin{figure}[!htb]
 \begin{floatrow}[2]\
@@ -71,6 +72,19 @@ Zuerst schlage ich aber noch eine Vereinfachung des Gedankenexperiments vor: Die
 {\includegraphics[width=0.5\textwidth]{d.png}}
 \end{floatrow}
 \end{figure}
-Da wir nun das Modell geschachtelt dargestellt haben, können wir unsere Erkenntnis aus dem simpleren Problem darauf anwenden.
+Da wir nun das Modell geschachtelt dargestellt haben, können wir unsere Erkenntnis aus dem simpleren Problem darauf anwenden. Ich starte die Analyse kurz vor $t_2$ im Originaldokument, also kurz bevor $W_1$ seine Messung durchführt.
+\begin{itemize}
+	\item \textbf{Vor $t_2$}: Der Zustand ist gleich wie im Originaldokument: $\frac{1}{\sqrt{3}}\ket{h}\ket{\downarrow} + \sqrt{\frac{2}{3}}\ket{t}\qty(\frac{1}{\sqrt{2}} \ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{\uparrow})$
+	\item \textbf{$t_2$}: $W_1$ misst nun das Labor von $F_1$ in der basis $\qty{\ket{+}_{L_1}, \ket{-}_{L_1}}$. Wie im simpleren Beispiel entfernen wir zuerst $Q_2$: $\frac{1}{\sqrt{3}}\ket{h} + \sqrt{\frac{2}{3}}\ket{t} = \qty(\frac{1}{\sqrt{3}} + \frac{1}{\sqrt{6}})\ket{+}_{L_1} + \qty(-\frac{1}{\sqrt{3}} + \frac{1}{\sqrt{6}})\ket{-}_{L_1}$. Nach Annahme, wie im Originaldokument, misst $W_1$ $\ket{-}_{L_1}$, was $\frac{1}{\sqrt{2}} \ket{h} + \frac{1}{\sqrt{2}} \ket{t}$ entspricht. Nun fügen wir $Q_2$ wieder zu dem richtigen Summanden hinzu: $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{t}\qty(\frac{1}{\sqrt{2}} \ket{\downarrow} + \frac{1}{\sqrt{2}} \ket{\uparrow}) = \frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{2} \ket{t}\ket{\downarrow} + \frac{1}{2} \ket{t}\ket{\uparrow}$.
+	\item \textbf{$t_3$}: $W_2$ misst nun das Labor von $F_1$ in der basis $\qty{\ket{+}_{L_2}, \ket{-}_{L_2}}$. Wir entfernen nun aus $\frac{1}{\sqrt{2}} \ket{h}\ket{\downarrow} + \frac{1}{2} \ket{t}\ket{\downarrow} + \frac{1}{2} \ket{t}\ket{\uparrow} = \qty(\frac{2}{\sqrt{6}} \ket{h} + \frac{1}{\sqrt{3}} \ket{t})\frac{\sqrt{3}}{2}\ket{\downarrow} + \frac{1}{2} \ket{t}\ket{\uparrow}$ dasmal $Q_1$: $\frac{\sqrt{3}}{2}\ket{\downarrow} +  \frac{1}{2} \ket{\uparrow} = \frac{1}{4}\qty(\sqrt{2} + \sqrt{6})\ket{+}_{L_2} + \frac{ \frac{\sqrt{3}}{2} - \frac{1}{2} }{\sqrt{2}}\ket{-}_{L_2}$. Wieder nach Annahme misst $W_2$ $\ket{-}_{L_2} = \frac{1}{\sqrt{2}} \ket{\downarrow} - \frac{1}{\sqrt{2}} \ket{\uparrow}$. Wir fügen nun wieder $Q_1$ hinzu, worauf das Endergebnis $\qty(\frac{2}{\sqrt{6}} \ket{h} + \frac{1}{\sqrt{3}} \ket{t})\frac{1}{\sqrt{2}}\ket{\downarrow} - \frac{1}{\sqrt{2}}\ket{t}\ket{\uparrow} = \frac{1}{\sqrt{3}} \ket{h}\ket{\downarrow} - \frac{1}{\sqrt{6}}\ket{t}\ket{\downarrow} - \frac{1}{\sqrt{2}}\ket{t}\ket{\uparrow}$ lautet.
+\end{itemize}
+Man sieht jetzt, dass $\ket{h}\ket{\uparrow}$ nicht mehr gemessen werden kann, das Problem ist also behoben. Ich muss aber anmerken, dass ich zum jetztigen Zeitpunkt(als ich das Dokument geschrieben habe) nicht weiss ob die Messmethode, die ich hier eingeführt habe, schonmal eingeführt wurde, oder sogar gebräuchlich ist.
+
+\section*{Referenzen}
+\begin{itemize}
+	\item \url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6143649/}
+	\item \url{https://en.wikipedia.org/wiki/Wigner%27s_friend}
+	\item \url{https://link.springer.com/book/10.1007/978-3-658-10455-9}
+\end{itemize}
 
 \end{document}
