--- a/version2.tex
+++ b/version2.tex
@@ -36,7 +36,7 @@ Wir betrachten das Gedankenexperiment zu der Zeit, nachdem $F_2$ sein Qubit mit 
 \begin{itemize}
 	\item \textbf{Statement 2 von} $F_2$: ``Wenn ich $\ket{\uparrow}$ messe, dann hat $F_1$ $\ket{t}$ gemessen.''
 \end{itemize}
-Hier ist es sehr wichtig zu bemerken, dass wenn dies der Fall ist, $F_2$ $F_1$'s Qubit in der Standardbasis mitgemessen hat. Dies wäre nicht der Fall, wenn $F_2$ $\ket{\downarrow}$ gemessen hätte. $W_1$ führt nun seine Messung aus. Da er nur $F_1$'s Qubit, beziehungsweise dessen Labor, misst, ist es auch wichtig, dass die Qubits, beziehungsweise die Labore, von $F_1$ und $F_2$ voneinander isoliert sind, wie dies in einem Quantenregister von einem Quantencomputer der Fall wäre. Da $W_1$ $F_1$'s Qubit in einer Superposition misst, endet es schliesslich auch in einer Superposition. Hier tritt das Problem auf: Da $F_2$ den Ablauf kennt, weiss $F_2$ nun dass obwohl er vorhin $\ket{\uparrow}$ gemessen hat, das Qubit von $F_1$ sich wieder in einer Superposition befindet. Er kommt also selber zum Schluss, dass sein Statement nicht mehr zu dieser Zeit gilt! Wenn am Schluss vom Experiment die Statements in der umgekehrten Reihenfolge aufeinander angewendet werden, kann Statement 2 nicht mehr aus Statement 3 gefolgert werden. Im originalen Artikel wird am Schluss Statement 2 falsch interpretiert, nämlich als: ``Wenn ich $\ket{\uparrow}$ messe, dann wird ab dann, während des Experiments, $F_1$ und sein Labor im Zustand $\ket{t}$ sein.''
+Hier ist es sehr wichtig zu bemerken, dass wenn dies der Fall ist, $F_2$ $F_1$'s Qubit in der Standardbasis mitgemessen hat. Dies wäre nicht der Fall, wenn $F_2$ $\ket{\downarrow}$ gemessen hätte. $W_1$ führt nun seine Messung aus. Da er nur $F_1$'s Qubit, beziehungsweise dessen Labor, misst, ist es auch wichtig, dass die Qubits, beziehungsweise die Labore, von $F_1$ und $F_2$ voneinander isoliert sind, wie dies in einem Quantenregister von einem Quantencomputer der Fall wäre. Da $W_1$ $F_1$'s Qubit in einer Superposition misst, endet es schliesslich auch in einer Superposition. Hier tritt das Problem auf: Da $F_2$ den Ablauf kennt, weiss $F_2$ nun dass obwohl er vorhin $\ket{\uparrow}$ gemessen hat, das Qubit von $F_1$ sich wieder in einer Superposition befindet. Er kommt also selber zum Schluss, dass sein Statement sich auf die Zeit vor $W_1$'s Messung bezieht, und sich nicht mehr auf die jetzige Zeit! Wenn am Schluss vom Experiment die Statements in der umgekehrten Reihenfolge aufeinander angewendet werden, kann Statement 2 nicht mehr aus Statement 3 gefolgert werden. Im originalen Artikel wird am Schluss Statement 2 falsch interpretiert, nämlich als: ``Wenn ich $\ket{\uparrow}$ messe, dann wird ab dann, während des Experiments, $F_1$ und sein Labor im Zustand $\ket{t}$ sein.''
 
 \begin{figure}[!htb]
 \begin{floatrow}[1]\
