--- a/deutsch.tex
+++ b/deutsch.tex
@@ -34,7 +34,7 @@ Das Postulat lautet wie folgt:
 	\item[] Die Quantenmechanik mit ihren Messungen muss immer aus der Many-Worlds Perspektive beschrieben werden.
 \end{itemize}
 Der Grund wieso dieses Postulat früher nicht gebraucht wurde, ist, dass dieses Gedankenexperiment eine Änderung im Bezug auf andere (Gedanken)Experimente enthält:
-Zwei Agenten, wobei beide Agenten den anderen jeweils in einer Superposition sehen, machen Aussagen übereinander.
+Zwei Agenten, wobei beide Agenten den anderen jeweils in einer Superposition sehen, führen Messungen aus und machen Aussagen übereinander.
 Dieses Postulat erzeugt praktisch keine Änderungen bei älteren Experimenten, da sie diese Eigenschaft nicht besitzen.
 Jedoch hat es Auswirkungen auf folgende Aussage:
 \begin{itemize}
