--- a/english.tex
+++ b/english.tex
@@ -34,7 +34,7 @@ The postulate looks like this:
 	\item[] Quantum mechanics and its measurements have to be described from the view of the many worlds perspective.
 \end{itemize}
 The reason why this postulate wasn't needed earlier in the past, is that this thaught experiment has a different property compared to other (thaught)experiments:
-Two agents, who see each other in a superposition, make statements about each other.
+Two agents, who see each other in a superposition, perform measurements and make statements about each other.
 This postulate practically has no impact on other, older experiments, since those don't have this property.
 However, it influences the following statement:
 \begin{itemize}
